# data-analysis-multiagents

./: .dockerignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  pyproject.toml  setup.py  version.py
resources/img/: data_analysis_multiagents_architecture.drawio
src/backend/: main.py
src/ui/: streamlit_app.py
